--- a/multiple-balls/index.html
+++ b/multiple-balls/index.html
@@ -13,12 +13,12 @@ Need help? ping me at @prashishh or shoot me an email at prashishh@gmail.com
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Bouncy Ball</title>
+    <title>Bouncy Ball - Multiple Ball</title>
 </head>
 <body>
     
     <!-- Create an instance of <canvas> element where we can start drawing -->
-	<canvas id="bouncing-ball-box" width="300" height="300" style="border: solid 1px" tabindex="1"></canvas>  
+	<canvas id="bouncing-ball-box" width="300px" height="300px" style="border: solid 1px"></canvas>  
     
     <script>
 		
