love remix width

--- a/Bouncing Ball/text-bouncing-balls/Remixes/prashish/index.html
+++ b/Bouncing Ball/text-bouncing-balls/Remixes/prashish/index.html
@@ -23,7 +23,7 @@ Need help? ping me at @prashishh or shoot me an email at prashishh@gmail.com
     </style>
   </head>
   <body>
-    <canvas id="myCanvas" width="500" height="200" style="border: solid 1px"></canvas>
+    <canvas id="myCanvas" width="700" height="300" style="border: solid 1px"></canvas>
     <script>
       window.requestAnimFrame = (function(callback) {
         return window.requestAnimationFrame || window.webkitRequestAnimationFrame || window.mozRequestAnimationFrame || window.oRequestAnimationFrame || window.msRequestAnimationFrame ||
@@ -40,58 +40,29 @@ Need help? ping me at @prashishh or shoot me an email at prashishh@gmail.com
         var yellow = '#FFC636';
         var green = '#02A817';
 
-        // I
-        balls.push(new Ball(92, 61, 0, 0, red));
-        balls.push(new Ball(76, 60, 0, 0, red));
-        balls.push(new Ball(62, 62, 0, 0, red));
-        balls.push(new Ball(46, 60, 0, 0, red));
-        balls.push(new Ball(32, 59, 0, 0, red));
-        balls.push(new Ball(62, 77, 0, 0, red));
-        balls.push(new Ball(63, 93, 0, 0, red));
-        balls.push(new Ball(61, 109, 0, 0, red));
-        balls.push(new Ball(62, 124, 0, 0, red));
-        balls.push(new Ball(62, 139, 0, 0, red));
-        balls.push(new Ball(92, 140, 0, 0, red));
-        balls.push(new Ball(77, 142, 0, 0, red));
-        balls.push(new Ball(46, 142, 0, 0, red));
-        balls.push(new Ball(32, 140, 0, 0, red));
-
-        // love
-        balls.push(new Ball(199, 82, 0, 0, red));
-        balls.push(new Ball(190, 73, 0, 0, red));
-        balls.push(new Ball(180, 63, 0, 0, red));
-        balls.push(new Ball(167, 58, 0, 0, red));
-        balls.push(new Ball(160, 70, 0, 0, red));
-        balls.push(new Ball(158, 86, 0, 0, red));
-        balls.push(new Ball(163, 100, 0, 0, red));
-        balls.push(new Ball(175, 112, 0, 0, red));
-        balls.push(new Ball(185, 124, 0, 0, red));
-        balls.push(new Ball(198, 129, 0, 0, red));
-        balls.push(new Ball(209, 124, 0, 0, red));
-        balls.push(new Ball(222, 114, 0, 0, red));
-        balls.push(new Ball(234, 100, 0, 0, red));
-        balls.push(new Ball(240, 86, 0, 0, red));
-        balls.push(new Ball(240, 73, 0, 0, red));
-        balls.push(new Ball(237, 58, 0, 0, red));
-        balls.push(new Ball(227, 58, 0, 0, red));
-        balls.push(new Ball(217, 67, 0, 0, red));
-        balls.push(new Ball(208, 78, 0, 0, red));
+        // P
+        balls.push(new Ball(72, 98, 0, 0, blue));
+        balls.push(new Ball(89, 97, 0, 0, blue));
+        balls.push(new Ball(105, 90, 0, 0, blue));
+        balls.push(new Ball(109, 76, 0, 0, blue));
+        balls.push(new Ball(103, 63, 0, 0, blue));
+        balls.push(new Ball(92, 54, 0, 0, blue));
+        balls.push(new Ball(79, 52, 0, 0, blue));
+        balls.push(new Ball(65, 53, 0, 0, blue));
+        balls.push(new Ball(57, 63, 0, 0, blue));
+        balls.push(new Ball(53, 76, 0, 0, blue));
+        balls.push(new Ball(55, 90, 0, 0, blue));
+        balls.push(new Ball(56, 106, 0, 0, blue));
+        balls.push(new Ball(57, 120, 0, 0, blue));
+        balls.push(new Ball(59, 135, 0, 0, blue));
           
-        // U
-        balls.push(new Ball(310, 60, 0, 0, red));
-        balls.push(new Ball(312, 73, 0, 0, red));
-        balls.push(new Ball(309, 88, 0, 0, red));
-        balls.push(new Ball(310, 102, 0, 0, red));
-        balls.push(new Ball(312, 114, 0, 0, red));
-        balls.push(new Ball(320, 126, 0, 0, red));
-        balls.push(new Ball(336, 129, 0, 0, red));
-        balls.push(new Ball(350, 126, 0, 0, red));
-        balls.push(new Ball(360, 115, 0, 0, red));
-        balls.push(new Ball(364, 99, 0, 0, red));
-        balls.push(new Ball(364, 82, 0, 0, red));
-        balls.push(new Ball(361, 68, 0, 0, red));
-        balls.push(new Ball(363, 60, 0, 0, red));
-
+		// O
+        balls.push(new Ball(170, 53, 0, 0, blue));
+        balls.push(new Ball(162, 62, 0, 0, red));
+        balls.push(new Ball(160, 76, 0, 0, red));
+        balls.push(new Ball(162, 90, 0, 0, red));
+        balls.push(new Ball(162, 90, 0, 0, red));
+        balls.push(new Ball(162, 90, 0, 0, red));
 
         return balls;
       }
